# hello-vscode-cmake

./: .gitmodules  README.md  hello-vscode-cmake.code-workspace  readme.md
hello-clang-format/: CMakeLists.txt
hello-cmake/: CMakeLists.txt
hello-conan/: main.cpp  readme.md
hello-rpi-cross-compile/: readme.md
hello-rpi-cross-compile/hello-raspbian-cross-pi-gcc/: CMakeLists.txt
hello-rpi-cross-compile/src/: main.c
hello-subprojects/project1/: CMakeLists.txt  main.cpp
hello-subprojects/project2/: CMakeLists.txt  main.cpp
projects/cmake-tutorial-project/: tutorial.cxx
projects/hello-clang-tidy/: .clang-tidy  CMakeLists.txt  main.cpp
projects/hello-conan/: CMakeLists.txt  README.md
projects/hello-rpi-cross-compile/: CMakeLists.txt
projects/hello-rpi-cross-compile/hello-raspbian-raspberry-pi/: CMakeLists.txt
projects/hello-subprojects/: CMakeLists.txt
